rearrange the base.html code

--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -64,12 +64,17 @@ SOFTWARE.
         <div class="form-group">
           <label class="control-label" for="inputSmall">Password</label>
           <input class="txtbd form-control input-sm" type="text" id="inputSmall " placeholder="Password">
-          <a href="#forget-popup" class="open-popup-link"><p class="p6">forget password?</p></a>
+          <a href="#forget-popup" class="open-popup-link">
+            <p class="p6">forget password?</p>
+          </a>
         </div>
 
         <div class="modal-footer">
           <br>
-          <div class="poptxt_login">Don't have an account? You can <a href="#register-popup" class="open-popup-link"><p class="p6">register here</p></a></div>
+          <div class="poptxt_login">
+            Don't have an account? You can <a href="#register-popup" class="open-popup-link">
+            <p class="p6">register here</p></a>
+          </div>
             <div class="poptxt_sm">
               <br>
               <a href="" class="btn btn-default btn1" onclick="log_in();">Submit</a>
@@ -180,14 +185,18 @@ SOFTWARE.
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><p class="p2">Contest<b class="caret"></b></p> </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <p class="p2">Contest<b class="caret"></b></p>
+          </a>
           <ul class="dropdown-menu">
             <li><a href="#">contest archive</a></li>
             <li><a href="#">running contest</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><p class="p2">Problem<b class="caret"></b></p> </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <p class="p2">Problem<b class="caret"></b></p>
+          </a>
           <ul class="dropdown-menu">
             <li><a href="#">volume 1</a></li>
             <li><a href="#">volume 2</a></li>
@@ -210,7 +219,9 @@ SOFTWARE.
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ><img src={% static "./images/14.png "%} height="50" width="50" onclick="info();" class="ring"></li>
-        <li id="notlogin" ><a href="#login-popup" class="open-popup-link"><p class="p3">Login</p></a></li>
+        <li id="notlogin" >
+          <a href="#login-popup" class="open-popup-link"><p class="p3">Login</p></a>
+        </li>
       </ul>
     </div>
   </div>
