--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -46,7 +46,9 @@ SOFTWARE.
         <div class="logo" >
          <h1><p class="p1">NTHUOJ<p></h1>
          <hr class="hr2">
-         <p style="text-align: left">This is National Tsing Hua University Online Judge, an ACM-like online judge designed for training purposes and a platform of contest. You may utilize this site by the links on the side bar and top-right corner. Each of them will redirect you to a page with the following functions.</p>
+         <p style="text-align: left">
+          This is National Tsing Hua University Online Judge, an ACM-like online judge designed for training purposes and a platform of contest. You may utilize this site by the links on the side bar and top-right corner. Each of them will redirect you to a page with the following functions.
+        </p>
         </div>
       </td>
      </tr>
