--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -252,11 +252,11 @@ SOFTWARE.
   {% block body_block %}
   {% endblock body_block %}
   <!-- footer -->
-  <div class="footer fooe" style="height: 40px">
-    <a href="" class="p11"  style="position:relative;left:30px;">Contact us</a>
-    <p class="p10" style="position:relative;float: right;right:15px;top:5px">
-      © NTHU Online Judge 2014, Templates are from Bootstrap Project
-    </p>
+  <div class="footer fooe" style="height: 35px">
+    <a href="" class="p11" style="position:relative;left:30px;">Contact us</a>
+    <p class="p10" style="position:relative;left:400px;">
+      © NTHU Online Judge 2014, Templates are from Bootstrap Project</p> 
+    <p id='time' style="font-size: 18px;color:white;position:relative;float:right;right:30px;">{{ tstr }}</p>
   </div>
 
 </body>
