rearrange code to avoid over 80 charceters in one lime

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -45,19 +45,23 @@ SOFTWARE.
         <div class="logo" >
          <h1><p class="p1">NTHUOJ<p></h1>
          <hr class="hr2">
-         <p style="text-align: left">
-          This is National Tsing Hua University Online Judge, an ACM-like online judge designed for training purposes and a platform of contest. You may utilize this site by the links on the side bar and top-right corner. Each of them will redirect you to a page with the following functions.
-        </p>
+          <p style="text-align: left">
+            This is National Tsing Hua University Online Judge, an ACM-like
+            online judge designed for training purposes and a platform of
+            contest. You may utilize this site by the links on the side bar and
+            top-right corner. Each of them will redirect you to a page with
+            the following functions.
+          </p>
         </div>
       </td>
      </tr>
   </table>
 
   <!-- contest -->
-  <table align="center" class="table table-striped table-hover  table1"  >
+  <table align="center" class="table table-striped table-hover  table1">
     <thead class="line" style="background-color: #E5E5E5">
       <tr  style="background-color: #fff">
-        <td colspan="3"><p class="p5"><b>Running Contest</b></p></td> 
+        <td colspan="3"><p class="p5"><b>Running Contest</b></p></td>
       </tr>
     </thead>
     <thead style="background-color: #E5E5E5">
