--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -30,14 +30,19 @@ SOFTWARE.
   {% block title_name %}
   {% endblock title_name %}
   <!-- necessarily jQeuery -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+  </script>
   <!-- bootstrap, bootwatch JS & CSS -->
-  <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.css" media="screen">
-  <link rel="stylesheet" href="http://bootswatch.com/assets/css/bootswatch.min.css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" 
+            href="http://bootswatch.com/paper/bootstrap.css" media="screen">
+  <link rel="stylesheet" 
+            href="http://bootswatch.com/assets/css/bootswatch.min.css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
+  </script>
   <!-- Magnific Popup core JS & CSS -->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js">
+  </script>
   <link rel="stylesheet" href={% static "./css/mfp-fade.css"%}>
   <script src={% static "./js/popup-setting.js"%}></script>
   <script src={% static "./js/index.js"%}></script>
@@ -55,11 +60,13 @@ SOFTWARE.
       <form class="form-horizontal login">
         <div class="form-group">
           <label class="control-label" for="inputSmall">Account</label>
-          <input class="txtbd form-control input-sm" type="text" id="inputSmall" placeholder="Account">
+          <input class="txtbd form-control input-sm" type="text" 
+                        id="inputSmall" placeholder="Account">
         </div>
         <div class="form-group">
           <label class="control-label" for="inputSmall">Password</label>
-          <input class="txtbd form-control input-sm" type="text" id="inputSmall " placeholder="Password">
+          <input class="txtbd form-control input-sm" type="text" 
+                        id="inputSmall " placeholder="Password">
           <a href="#forget-popup" class="open-popup-link">
             <p class="p6">forget password?</p>
           </a>
@@ -112,19 +119,23 @@ SOFTWARE.
             <label class="control-label" for="inputSmall">
               Account
             </label>
-            <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Account">
+            <input class="form-control input-sm" type="text" 
+                          id="inputSmall" placeholder="Account">
             <label class="control-label" for="inputSmall">
               Password
             </label>
-            <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Password">
+            <input class="form-control input-sm" type="text" 
+                          id="inputSmall" placeholder="Password">
             <label class="control-label" for="inputSmall">
               Reenter Password
             </label>
-            <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Reenter Password">
+            <input class="form-control input-sm" type="text" 
+                          id="inputSmall" placeholder="Reenter Password">
             <label class="control-label" for="inputSmall">
               Email
             </label>
-            <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Email">
+            <input class="form-control input-sm" type="text" 
+                          id="inputSmall" placeholder="Email">
 
           <div class="poptxt_sm">
             <br><a href="" class="btn btn-default btn1">Submit</a>
@@ -146,9 +157,11 @@ SOFTWARE.
           </label>
           <br>
           <label class="control-label" for="inputSmall">Account</label>
-          <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Account">
+          <input class="form-control input-sm" type="text" 
+                        id="inputSmall" placeholder="Account">
           <label class="control-label" for="inputSmall">Email</label>
-          <input class="form-control input-sm" type="text" id="inputSmall" placeholder="Email">
+          <input class="form-control input-sm" type="text" 
+                        id="inputSmall" placeholder="Email">
 
           <div class="poptxt_sm">
             <br>
@@ -184,7 +197,8 @@ SOFTWARE.
   <!-- navbar -->
   <div class="navbar navbar-default newbar">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" 
+                      data-target=".navbar-responsive-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -228,7 +242,8 @@ SOFTWARE.
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li >
-          <img src={% static "./images/14.png "%} height="50" width="50" onclick="info();" class="ring">
+          <img src={% static "./images/14.png "%} height="50" width="50" 
+                    onclick="info();" class="ring">
         </li>
         <li id="notlogin" >
           <a href="#login-popup" class="open-popup-link">
@@ -246,7 +261,8 @@ SOFTWARE.
   </div>
   <div class="temp"  >
     <input type="text" id='txt' style="width:150px";>
-    <input type="button" style="cursor: pointer;" value="send" onclick="sendinfo();">
+    <input type="button" style="cursor: pointer;" value="send" 
+                  onclick="sendinfo();">
   </div>
 
   {% block body_block %}
@@ -256,7 +272,10 @@ SOFTWARE.
     <a href="" class="p11" style="position:relative;left:30px;">Contact us</a>
     <p class="p10" style="position:relative;left:400px;">
       © NTHU Online Judge 2014, Templates are from Bootstrap Project</p> 
-    <p id='time' style="font-size: 18px;color:white;position:relative;float:right;right:30px;">{{ tstr }}</p>
+    <p id='time' 
+          style="font-size: 18px;color:white;position:relative;float:right;right:30px;">
+      {{ tstr }}
+    </p>
   </div>
 
 </body>
