fix url.py conflict

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -83,7 +83,8 @@ SOFTWARE.
         <tr>
           <td>
             {% if admin %}
-            <button type="button" class="btn btn-danger btn-xs"> <span class="glyphicon glyphicon-remove"></span>
+            <button type="button" class="btn btn-danger btn-xs">
+              <span class="glyphicon glyphicon-remove"></span>
             </button>
 
             <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#contestInfo{{ contest.id }}">
@@ -178,9 +179,11 @@ SOFTWARE.
                   <tr>
                     {% if admin %}
                     <td>
-                      <button type="button" class="btn btn-warning btn-xs"> <span class="glyphicon glyphicon-refresh"></span>
+                      <button type="button" class="btn btn-warning btn-xs">
+                        <span class="glyphicon glyphicon-refresh"></span>
                       </button>
-                      <button type="button" class="btn btn-danger btn-xs"> <span class="glyphicon glyphicon-minus"></span>
+                      <button type="button" class="btn btn-danger btn-xs">
+                        <span class="glyphicon glyphicon-minus"></span>
                       </button>
                     </td>
                     {% endif %}
@@ -192,7 +195,8 @@ SOFTWARE.
                   {% if admin %}
                   <tr>
                     <td style="width:10%">
-                      <button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-plus"></span>
+                      <button type="button" class="btn btn-success btn-xs">
+                        <span class="glyphicon glyphicon-plus"></span>
                       </button>
                     </td>
                     <td></td>
@@ -220,7 +224,9 @@ SOFTWARE.
                   <tr>
                     {% if admin %}
                     <td>
-                      <button type="button" class="btn btn-danger btn-xs"> <span class="glyphicon glyphicon-minus"></span>
+                      <button type="button" class="btn btn-danger btn-xs">
+                        <span class="glyphicon glyphicon-minus"></span>
+                      </button>
                     </td>
                     {% endif %}
                     <td>{{ forloop.counter }}</td>
@@ -229,7 +235,8 @@ SOFTWARE.
                   <tr>
                     {% if admin %}
                     <td style="width:10%">
-                      <button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-plus"></span>
+                      <button type="button" class="btn btn-success btn-xs">
+                        <span class="glyphicon glyphicon-plus"></span>
                       </button>
                     </td>
                     <td>
@@ -289,7 +296,9 @@ SOFTWARE.
                   <tr>
                     {% if admin %}
                     <td>
-                      <button type="button" class="btn btn-danger btn-xs"> <span class="glyphicon glyphicon-minus"></span>
+                      <button type="button" class="btn btn-danger btn-xs">
+                        <span class="glyphicon glyphicon-minus"></span>
+                      </button>
                     </td>
                     {% endif %}
                     <td>{{ forloop.counter }}</td>
@@ -300,7 +309,8 @@ SOFTWARE.
                   {% if admin %}
                   <tr>
                     <td style="width:10%">
-                      <button type="button" class="btn btn-success btn-xs"> <span class="glyphicon glyphicon-plus"></span>
+                      <button type="button" class="btn btn-success btn-xs">
+                        <span class="glyphicon glyphicon-plus"></span>
                       </button>
                     </td>
                     <td></td>
