fix line over 80 character

--- a/problem/templates/problem/editTab/testcase.html
+++ b/problem/templates/problem/editTab/testcase.html
@@ -27,7 +27,8 @@
       <input type="number" value="32">
     </td>
     <td>
-      <button class="btn btn-primary" onclick="return false" data-toggle='modal' data-target='#edit_testcase'>Edit</button>
+      <button class="btn btn-primary" onclick="return false" 
+      data-toggle='modal' data-target='#edit_testcase'>Edit</button>
       <button class="btn btn-primary" onclick="return false">Update</button>
       <button class="btn btn-primary" onclick="return false">Delete</button>
     </td>
