--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -96,7 +96,8 @@ SOFTWARE.
   <h3>Tags</h3>
   <div id='tags' style='float:left;width:60%'>
     {% for t in tag %}
-    <span class='label label-info'>{{t}}</span> {% endfor %}
+      <span class='label label-info'>{{t}}</span>
+    {% endfor %}
   </div>
   <div class='input-group' style='float:right;width:30%'>
     <input type='text' id='newTag' class='form-control' width='25%'>
