--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -29,15 +29,20 @@ SOFTWARE.
     {% csrf_token %}
     <div style="width:80%; float:left;">
       <ul class="nav nav-tabs" role="tablist">
-        <li class="active"><a href="#info" role="tab" data-toggle="tab">Info</a>
+        <li class="active">
+          <a href="#info" role="tab" data-toggle="tab">Info</a>
         </li>
-        <li><a href="#tag" role="tab" data-toggle="tab">Tag</a>
+        <li>
+          <a href="#tag" role="tab" data-toggle="tab">Tag</a>
         </li>
-        <li><a href="#description" role="tab" data-toggle="tab">Description</a>
+        <li>
+          <a href="#description" role="tab" data-toggle="tab">Description</a>
         </li>
-        <li><a href="#sampio" role="tab" data-toggle="tab">Sample IO</a>
+        <li>
+          <a href="#sampio" role="tab" data-toggle="tab">Sample IO</a>
         </li>
-        <li><a href="#testcase" role="tab" data-toggle="tab">TestCase</a>
+        <li>
+          <a href="#testcase" role="tab" data-toggle="tab">TestCase</a>
         </li>
       </ul>
 
@@ -85,7 +90,8 @@ SOFTWARE.
     </div>
     <div style="width:20%;float:right">
       <a class='btn btn-success' target='_blank' id='preview_button'>Preview</a>
-      <input type="submit" onclick="return submitTag()" value="Save" class="btn btn-primary" href="{% url 'problem.views.problem' %}">
+      <input type="submit" onclick="return submitTag()" 
+      value="Save" class="btn btn-primary" href="{% url 'problem.views.problem' %}">
     </div>
   </form>
 </div>
@@ -94,7 +100,8 @@ SOFTWARE.
 $('#preview_button').click(function() {
   MyWindow = window.open('{% url "problem.views.preview" %}',
     'MyWindow',
-    'toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=300'
+    'toolbar=no,location=no,directories=no,status=no,menubar=no,
+    scrollbars=yes,resizable=yes,width=600,height=30'
   );
   return false;
 });
