--- a/problem/templates/problem/problem_list.html
+++ b/problem/templates/problem/problem_list.html
@@ -32,32 +32,34 @@ SOFTWARE.
   </thead>
   <tbody>
     {% for p in problem%}
-    <tr>
-      <td>
-        <span id='rejudge' class='glyphicon glyphicon-refresh' data-toggle="tooltip" data-placement="left" title="Rejudge"></span>&nbsp;{{p.pid}}</td>
-      <td><a href="{% url 'problem.views.detail' p.pid %}">{{p.name}}</a>&nbsp;
-        <a href="{% url 'problem.views.edit' p.pid %}">
-          <span id='edit' class='glyphicon glyphicon-pencil' data-toggle="tooltip" data-placement="right" title="Edit"></span>
-        </a>
-      </td>
-      <script>
-      $("#rejudge").tooltip('hide');
-      $("#edit").tooltip('hide');
-      </script>
-      <td>
-        <div class="progress">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{p.pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.pass}}%;">
-            {{p.pass}}%
+      <tr>
+        <td>
+          <span id='rejudge' class='glyphicon glyphicon-refresh' 
+          data-toggle="tooltip" data-placement="left" title="Rejudge"></span>&nbsp;{{p.pid}}</td>
+        <td><a href="{% url 'problem.views.detail' p.pid %}">{{p.name}}</a>&nbsp;
+          <a href="{% url 'problem.views.edit' p.pid %}">
+            <span id='edit' class='glyphicon glyphicon-pencil' 
+            data-toggle="tooltip" data-placement="right" title="Edit"></span>
+          </a>
+        </td>
+        <script>
+        $("#rejudge").tooltip('hide');
+        $("#edit").tooltip('hide');
+        </script>
+        <td>
+          <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{p.pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.pass}}%;">
+              {{p.pass}}%
+            </div>
+            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{p.not_pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.not_pass}}%;">
+              {{p.not_pass}}%
+            </div>
           </div>
-          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="{{p.not_pass}}" aria-valuemin="0" aria-valuemax="100" style="width: {{p.not_pass}}%;">
-            {{p.not_pass}}%
-          </div>
-        </div>
-      </td>
-      <td>
-        <button class="btn btn-primary">Delete</button>
-      </td>
-    </tr>
+        </td>
+        <td>
+          <button class="btn btn-primary">Delete</button>
+        </td>
+      </tr>
     {% endfor %}
   </tbody>
 </table>
