--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -220,18 +220,7 @@ SOFTWARE.
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <p class="p2">Problem<b class="caret"></b></p>
           </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">volume 1</a></li>
-            <li><a href="#">volume 2</a></li>
-            <li><a href="#">volume 3</a></li>
-            <li><a href="#">volume 4</a></li>
-            <li><a href="#">volume 5</a></li>
-            <li><a href="#">volume 6</a></li>
-            <li><a href="#">volume 7</a></li>
-            <li><a href="#">volume 8</a></li>
-            <li><a href="#">volume 9</a></li>
-            <li><a href="#">volume 10</a></li>
-          </ul>
+          <ul class="dropdown-menu" id="volume_num">{{ vol }}</ul>
         </li>
         <li><a href="/submit"><p class="p2">Submit</p></a></li>
         <li><a href="/status"><p class="p2">Status</p></a></li>
@@ -263,8 +252,7 @@ SOFTWARE.
     <input type="text" id='txt' style="width:150px";>
     <input type="button" style="cursor: pointer;" value="send" 
                   onclick="sendinfo();">
-  </div>
-
+  </div>  
   {% block body_block %}
   {% endblock body_block %}
   <!-- footer -->
