--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -102,7 +102,7 @@ SOFTWARE.
   <div class='input-group' style='float:right;width:30%'>
     <input type='text' id='newTag' class='form-control' width='25%'>
     <span class='input-group-btn'>
-      <button id='addTagButton' onclick="return addTag()" class='btn btn-default'>Add Tag</button>
+      <button id='addTagButton' class='btn btn-default'>Add Tag</button>
     </span>
   </div>
 
