--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -90,8 +90,7 @@ SOFTWARE.
     </div>
     <div style="width:20%;float:right">
       <a class='btn btn-success' target='_blank' id='preview_button'>Preview</a>
-      <input type="submit" onclick="return submitTag()" 
-      value="Save" class="btn btn-primary" href="{% url 'problem.views.problem' %}">
+      <input type="submit" value="Save" class="btn btn-primary" href="{% url 'problem.views.problem' %}">
     </div>
   </form>
 </div>
