--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -21,8 +21,9 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-{% extends "users/base.html" %}
+{% extends "index/base.html" %}
 {% load static %}
+
 {% block body_block %}
 
 <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js"></script>
@@ -57,117 +58,122 @@ SOFTWARE.
 
 <script src={% static "js/piechartsettings.js"%}></script>
 <script type="text/javascript">
-    $(function() {
-        plot_piechart({{piechart_data|safe}});
-    });
+$(function() {
+  plot_piechart({{ piechart_data|safe }});
+});
 </script>
 
 <div class="bs-docs-section">
   <div class="row">
     <div class="col-lg-6" style="width:49%;height:70%;float:left;">
-      <div class="well bs-component container-fulid">
-        <form class="form-horizontal" style="width:40%;padding:5px;">
-          <fieldset>
-            <legend>Statistics</legend>
-            <div id="piechart" style="width:500px;height:400px;"></div>
-          </fieldset>
-        </form>
+      <div class="panel panel-default">
+        <div class="panel-heading">Statistics</div>
+        <div class="panel-body">
+          <div class="form-group">
+            <label class="col-lg-2 control-label">Piechart</label>
+            <div class="col-lg-10">
+              <div id="piechart" style="width:500px;height:400px;"></div>
+            </div>
+          </div>
+          {% block statistic_block %}
+
+          {% endblock statistic_block %}
+        </div>
       </div>
     </div>
-
     <div class="col-lg-6" style="width:49%;height:70%;float:right;">
       {% block profile_field_block %}
-      <div class="well bs-component container-fulid">
-        <form class="form-horizontal" style="width:60%; padding: 5px;">
-          <fieldset>
-            <legend>Profile</legend>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">User ID</label>
-              <div class="col-lg-8">
-                <input type="text" class="form-control" value="" disabled>
+      <div class="panel panel-default">
+        <div class="panel-heading">Profile</div>
+        <div class="panel-body">
+          <form class="form-horizontal" style="width:60%; padding: 5px;">
+            <fieldset>
+              <div class="form-group">
+                <label class="col-lg-4 control-label">User ID</label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" value="" disabled>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Nickname</label>
-              <div class="col-lg-8">
-                <input type="text" class="form-control" value="">
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Nickname</label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" value="">
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Email</label>
-              <div class="col-lg-8">
-                <input type="text" class="form-control" value="">
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Email</label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" value="">
+                </div>
               </div>
-            </div>
 
-            <div class="form-group">
-              <label class="col-lg-4 control-label">New Password</label>
-              <div class="col-lg-8">
-                <input type="password" class="form-control" placeholder="Password">
+              <div class="form-group">
+                <label class="col-lg-4 control-label">New Password</label>
+                <div class="col-lg-8">
+                  <input type="password" class="form-control" placeholder="Password">
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Conform Password</label>
-              <div class="col-lg-8">
-                <input type="password" class="form-control" placeholder="Password">
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Conform Password</label>
+                <div class="col-lg-8">
+                  <input type="password" class="form-control" placeholder="Password">
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Class Participatd</label>
-              <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
-                <input type="text" class="form-control" value="" disabled>
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Class Participatd</label>
+                <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
+                  <input type="text" class="form-control" value="" disabled>
+                </div>
+                <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
+                  <input type="text" class="form-control" value="" disabled>
+                </div>
               </div>
-              <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
-                <input type="text" class="form-control" value="" disabled>
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Team Participatd</label>
+                <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
+                  <input type="text" class="form-control" value="" disabled="">
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Team Participatd</label>
-              <div class="col-lg-8 col-lg-offset-4" style="margin-bottom:2px">
-                <input type="text" class="form-control" value="" disabled="">
+              <div class="form-group">
+                <label class="col-lg-4 control-label">Registration Date</label>
+                <div class="col-lg-8">
+                  <input type="text" class="form-control" value="" disabled>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label class="col-lg-4 control-label">Registration Date</label>
-              <div class="col-lg-8">
-                <input type="text" class="form-control" value="" disabled>
+              <div class="form-group">
+                <label for="select" class="col-lg-4 control-label">User Level</label>
+                <div class="col-lg-8">
+                  <select class="form-control" id="select">
+                    <option>admin</option>
+                    <option>judge</option>
+                    <option>sub-judge</option>
+                    <option>user</option>
+                  </select>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label for="select" class="col-lg-4 control-label">User Level</label>
-              <div class="col-lg-8">
-                <select class="form-control" id="select">
-                  <option>admin</option>
-                  <option>judge</option>
-                  <option>sub-judge</option>
-                  <option>user</option>
-                </select>
+              <legend>OJ Settings</legend>
+              <div class="form-group">
+                <label for="select" class="col-lg-4 control-label">Theme</label>
+                <div class="col-lg-8">
+                  <select class="form-control" id="select">
+                    <option>Paper</option>
+                    <option>Readable</option>
+                    <option>Cosmo</option>
+                    <option>Default</option>
+                    <option>Lumen</option>
+                  </select>
+                </div>
               </div>
-            </div>
-            <legend>OJ Settings</legend>
-            <div class="form-group">
-              <label for="select" class="col-lg-4 control-label">Theme</label>
-              <div class="col-lg-8">
-                <select class="form-control" id="select">
-                  <option>Paper</option>
-                  <option>Readable</option>
-                  <option>Cosmo</option>
-                  <option>Default</option>
-                  <option>Lumen</option>
-                </select>
+              <hr>
+              <div class="form-group">
+                <div class="col-lg-10">
+                  <a href="#passwd-popup" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#passwd-modal">Update</a>
+                  <span class="help-block">To update, it requires your current password.</span>
+                </div>
               </div>
-            </div>
-            <hr>
-            <div class="form-group">
-              <div class="col-lg-10">
-                <a href="#passwd-popup" class="btn btn-primary btn-lg" 
-                data-toggle="modal" data-target="#passwd-modal">Update</a>
-                <span class="help-block">To update, it requires your current password.</span>
-              </div>
-            </div>
-          </fieldset>
-
-        </form>
+            </fieldset>
+          </form>
+        </div>
       </div>
       {% endblock profile_field_block %}
     </div>
