--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -25,7 +25,7 @@ SOFTWARE.
 <div style='height:90px;' class='panel panel-default'>
   <div style='padding-left:10px;padding-right:10px'>
     <div style='float:left;width:60%;'>
-      <h2>A Simple Problem &nbsp;&nbsp;<a href="{% url 'problem.views.edit' pid%}">EDIT</a></h2>
+      <h2>{{ title }} &nbsp;&nbsp;<a href="{% url 'problem.views.edit' pid%}">EDIT</a></h2>
     </div>
     <div style="float:right;">
       <h5>
