fix some url problems

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -222,10 +222,10 @@ SOFTWARE.
           </a>
           <ul class="dropdown-menu" id="volume_num">{{ vol }}</ul>
         </li>
-        <li><a href="/submit"><p class="p2">Submit</p></a></li>
-        <li><a href="/status"><p class="p2">Status</p></a></li>
-        <li><a href="/group_list"><p class="p2">Group</p></a></li>
-        <li><a href="/team_list"><p class="p2">Team</p></a></li>
+        <li><a href="index/submit"><p class="p2">Submit</p></a></li>
+        <li><a href="index/status"><p class="p2">Status</p></a></li>
+        <li><a href="index/group_list"><p class="p2">Group</p></a></li>
+        <li><a href="index/team_list"><p class="p2">Team</p></a></li>
         <li><a href="#"><p class="p2">Personal</p></a></li>
         <li><a href="#"><p class="p2">User Rank</p></a></li>
       </ul>
