--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -22,7 +22,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 <!DOCTYPE html>
-{% extends "base.html" %}
+{% extends "index/base.html" %}
 {% load static %}
 
 {% block title_name %}
