--- a/index/templates/index/status.html
+++ b/index/templates/index/status.html
@@ -22,11 +22,11 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 <!DOCTYPE html>
-{% extends "base.html" %}
+{% extends "index/base.html" %}
 {% load static %}
 
 {% block title_name %}
-  <title>team_list</title>
+  <title>status</title>
 {% endblock title_name %}
 {% block import_source %}
 {% endblock import_source %}
