fix some url problems

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -203,7 +203,9 @@ SOFTWARE.
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><p class="p3">NTHU Online Judge</p></a>
+      <a href="/index/" class="navbar-brand">
+        <p class="p3">NTHU Online Judge</p>
+      </a>
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
@@ -212,7 +214,7 @@ SOFTWARE.
             <p class="p2">Contest<b class="caret"></b></p>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">contest archive</a></li>
+            <li><a href="/contest/">contest archive</a></li>
             <li><a href="#">running contest</a></li>
           </ul>
         </li>
@@ -222,10 +224,10 @@ SOFTWARE.
           </a>
           <ul class="dropdown-menu" id="volume_num">{{ vol }}</ul>
         </li>
-        <li><a href="index/submit"><p class="p2">Submit</p></a></li>
-        <li><a href="index/status"><p class="p2">Status</p></a></li>
-        <li><a href="index/group_list"><p class="p2">Group</p></a></li>
-        <li><a href="index/team_list"><p class="p2">Team</p></a></li>
+        <li><a href="/users/submit"><p class="p2">Submit</p></a></li>
+        <li><a href="/index/status"><p class="p2">Status</p></a></li>
+        <li><a href="/index/group_list"><p class="p2">Group</p></a></li>
+        <li><a href="/team/list"><p class="p2">Team</p></a></li>
         <li><a href="#"><p class="p2">Personal</p></a></li>
         <li><a href="#"><p class="p2">User Rank</p></a></li>
       </ul>
