--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -27,7 +27,7 @@ SOFTWARE.
     <div style='float:left;width:60%;'>
       <h2>{{ title }} &nbsp;&nbsp;<a href="{% url 'problem.views.edit' pid%}">EDIT</a></h2>
     </div>
-    <div style="float:right;">
+    <div class="problem-option" style="float:right;">
       <h5>
         <a>Status</a> &nbsp;|&nbsp;
         <a>Printable </a> &nbsp;|&nbsp; 
