--- a/problem/templates/problem/preview.html
+++ b/problem/templates/problem/preview.html
@@ -21,7 +21,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
-{% extends 'problem/nav.html' %} {% block Body %}
+{% extends 'problem/base.html' %} {% block body_block %}
 <div id="Body">
   {% include 'problem/problem.html' %}
 </div>
