fix contestArchive checkbox out of modal bug

--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -311,9 +311,15 @@ SOFTWARE.
           <div class="tab-pane" id="contest_others">
             <label>Freeze：</label>
             <input type="text" class="form-control"></input>
-            <input type="checkbox">Homework</input>
-            <br>
-            <input type="checkbox">Open Register</input>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox">Homework</input>
+              </label>
+              <br>
+              <label>
+                <input type="checkbox">Open Register</input>
+              </label>
+            </div>
           </div>
         </div>
       </div>
