--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -25,7 +25,6 @@ SOFTWARE.
 
 {% block import_source %}
 <link href="{% static 'contest/css/contest.css' %}" rel="stylesheet">
-<script src="{% static 'contest/js/jquery.panelslider.min.js' %}"></script>
 <script src="{%static 'contest/js/contest.js'%}"></script>
 {% endblock import_source %} 
 
@@ -51,7 +50,8 @@ SOFTWARE.
         </table>
       </div>
       <div class="progress" style="margin-left:5%;width:90%;">
-        <div id="timeline" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
+        <div id="timeline" class="progress-bar progress-bar-info" role="progressbar" 
+        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width:20%">
           <span class="sr-only"></span>
         </div>
       </div>
@@ -85,7 +85,8 @@ SOFTWARE.
           </tbody>
         </table>
         <div align="center">
-          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Clarify</button>
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" 
+          data-target="#myModal">Clarify</button>
         </div>
       </div>
     </div>
@@ -117,7 +118,8 @@ SOFTWARE.
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="myModal" tabindex="-1" 
+    role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
